chore: add base fetching positions
